add change name feature
